# tang-primer-25k-spi-io

./: .gitignore  README.md
src/esp32s3/chocolate-doom/: .gitignore  CMakeLists.txt  README.md  partitions_32m.csv  partitions_8m.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.n32r8  sdkconfig.defaults.n8r2
src/esp32s3/chocolate-doom/components/chocolate-doom/: CMakeLists.txt  doom.lf  doom_main.c  doom_main.h  doom_misc.c  doom_misc.h  opl.lf
src/esp32s3/chocolate-doom/components/chocolate-doom/doom/: CMakeLists.txt
src/esp32s3/chocolate-doom/components/chocolate-doom/doom/esp32_system/: CMakeLists.txt  esp32_mixer.c  esp32_mixer.h
src/esp32s3/chocolate-doom/components/chocolate-doom/doom/opl/: CMakeLists.txt  opl.c  opl_esp32.c  opl_esp32_nuked.c  opl_esp32_woody.c  opl_internal.h  woody_opl.c  woody_opl.h
src/esp32s3/chocolate-doom/components/chocolate-doom/doom/src/: CMakeLists.txt  i_cdmus.c  i_endoom.c  i_esp32music.c  i_esp32sound.c  i_glob.c  i_input.c  i_input.h  i_joystick.c  i_joystick.h  i_main.c  i_musicpack.c  i_sound.c  i_sound.h  i_swap.h  i_system.c  i_timer.c  i_video.c  i_video.h  m_argv.c  m_argv.h  m_config.c  m_misc.c  midifile.c  net_esp32.c  net_gui.h  net_sdl.h  v_diskicon.c  w_file.c  w_file.h  w_file_esp32.c  w_wad.c  z_native.c
src/esp32s3/chocolate-doom/components/chocolate-doom/doom/src/doom/: CMakeLists.txt  d_main.c
src/esp32s3/chocolate-doom/components/chocolate-doom/doom/textscreen/: CMakeLists.txt
src/esp32s3/chocolate-doom/components/chocolate-doom/libsamplerate-0.2.2/: CMakeLists.txt
src/esp32s3/chocolate-doom/flash_rw/config/: default.cfg  esp-idf-chocolate-doom.cfg
src/esp32s3/chocolate-doom/main/: CMakeLists.txt  main.c  pmod_board.h
src/esp32s3/drivers-esp-idf/main/: CMakeLists.txt  fpga_api_gpu.c  fpga_api_gpu.h  fpga_qspi.c  fpga_qspi.h  main.c
src/esp32s3/esp-idf-components/fpga_driver/: CMakeLists.txt  fpga_driver.c  fpga_driver.h  fpga_driver_hid_events.h  fpga_driver_task.c
src/esp32s3/esp-idf-components/fpga_driver_low/: CMakeLists.txt  fpga_api_gpu.c  fpga_api_gpu.h  fpga_api_io.c  fpga_api_io.h  fpga_qspi.c  fpga_qspi.h
src/esp32s3/esp-idf-components/pmod_esp32s3/: CMakeLists.txt  pmod_esp32s3.c  pmod_esp32s3.h
src/esp32s3/esp-idf-testapp/: CMakeLists.txt  sdkconfig
src/esp32s3/esp-idf-testapp/main/: CMakeLists.txt  main.c  main2.c
src/esp32s3/mpy-test/: bitbang_qspi.py  bitbang_qspi_old.py
src/esp32s3/quake/: .gitignore  CMakeLists.txt  README.md  partitions_32m.csv  sdkconfig.defaults  sdkconfig.defaults.n32r8
src/esp32s3/quake/components/quake/: CMakeLists.txt  fatfs_proxy.c  fatfs_proxy.h  quake.lf  quake_main.c  quake_main.h
src/esp32s3/quake/components/quake/esp32quake/: in_esp32.c  snd_esp32.c  sys_esp32.c  vid_esp32.c
src/esp32s3/quake/components/quake/winquake/: chase.c  cl_demo.c  cl_parse.c  client.h  common.c  common.h  console.c  cvar.c  cvar.h  gl_mesh.c  host.c  host_cmd.c  keys.c  keys.h  mathlib.h  menu.c  model.h  pr_edict.c  progs.h  quakedef.h  r_bsp.c  r_part.c  snd_gus.c  snd_mem.c  sound.h  sys_dos.c  vid.h  view.c
src/esp32s3/quake/flash_rw/id1/: config.cfg
src/esp32s3/quake/main/: CMakeLists.txt  main.c
src/fpga/hdmi_tx/: hdmi_tx.gprj
src/fpga/hdmi_tx/impl/: hdmi_tx_process_config.json
src/fpga/hdmi_tx/impl/pnr/: device.cfg
src/fpga/hdmi_tx/src/: framebuffer.sv  pins.cst  spi_gpu.sv  timing.sdc  top.sv
src/fpga/hdmi_tx/src/gowin/: pll_hdmi_1080.v  pll_hdmi_480.v
src/fpga/hdmi_tx/src/hdmi/: hdmi.sv
src/fpga/spi_io_bridge/: spi_io_bridge.gprj
src/fpga/spi_io_bridge/impl/: spi_io_bridge_process_config.json
src/fpga/spi_io_bridge/src/: framebuffer.sv  pins.cst  spi_gpu.sv  spi_io.sv  timing.sdc  top.sv
src/fpga/spi_io_bridge/src/gowin/: dpb_usb_mem.ipc  fifo_audio.ipc  fifo_audio.v  pll_hdmi_1080.ipc  pll_hdmi_1080.v  pll_hdmi_720.ipc  pll_hdmi_720.v  pll_usb.ipc  pll_usb.v
src/fpga/spi_io_bridge/src/hdmi/: audio_sample_packet.sv
src/fpga/spi_io_bridge/src/usb_host/: rv32i.v  usb11_phy.v  usb11_regs.v  usb11_sie.v  usb_host.v
src/fpga/spi_io_bridge/src/usb_host/ucmem/: README.md  _entry.s  enum.c  hid.c  hub.c  lib.c  make.sh  mem.hex  mem.mi  prnt.c  regs.h  req.c  setup.sh  sys.h  task.c  usb.h
